--- a/.snippetsrc
+++ b/.snippetsrc
@@ -1701,56 +1701,18 @@ downloadGithubFiles() {
         return 1
     fi
     
-    downloadRawFile() {
-        local raw_repo="$1"
-        local raw_branch="$2"
-        local raw_file="$3"
-        local raw_dest="$4"
-
-        local cache_bust=""
-        cache_bust=$(date +%s 2>/dev/null || echo "0")
-
-        mkdir -p "$(dirname "$raw_dest")"
-        curl -fsSL -H "Cache-Control: no-cache" -H "Pragma: no-cache" \
-            "https://raw.githubusercontent.com/$raw_repo/$raw_branch/$raw_file?cachebust=$cache_bust" \
-            -o "$raw_dest" 2>/dev/null
-    }
-
-    # Prefer zip-based download (fewer requests), but fall back to raw-per-file
-    # in networks where GitHub archive downloads are blocked/rewritten.
-    local name="${repo#*/}"
-    local url="https://github.com/$repo/archive/refs/heads/$branch.zip"
-
-    local tmp_dir=""
-    tmp_dir=$(mktemp -d "/tmp/${name}.XXXXXXXX" 2>/dev/null) || tmp_dir=""
-
-    if [ -n "$tmp_dir" ] && command -v unzip >/dev/null 2>&1; then
-        local zip="$tmp_dir/$name.zip"
-
-        if curl -fsSL --retry 3 --retry-delay 1 "$url" -o "$zip" 2>/dev/null && [ -s "$zip" ] && unzip -q "$zip" -d "$tmp_dir" 2>/dev/null; then
-            local src="$tmp_dir/$name-$branch"
-
-            for file in "${files[@]}"; do
-                [ -n "$file" ] || continue
-                local dest_path="$dest/$file"
-                mkdir -p "$(dirname "$dest_path")"
-                cp "$src/$file" "$dest_path" 2>/dev/null
-            done
-
-            rm -rf "$tmp_dir"
-            echo "Downloaded ${#files[@]} file(s) to $dest"
-            return 0
-        fi
-
-        rm -rf "$tmp_dir" 2>/dev/null || true
-    fi
-
-    # Raw fallback
+    # Raw-only download to avoid stale zip caches.
+    # Old zip-based implementation removed for freshness.
     local downloaded=0
     for file in "${files[@]}"; do
         [ -n "$file" ] || continue
         local dest_path="$dest/$file"
-        if downloadRawFile "$repo" "$branch" "$file" "$dest_path"; then
+        local cache_bust=""
+        cache_bust=$(date +%s 2>/dev/null || echo "0")
+        mkdir -p "$(dirname "$dest_path")"
+        if curl -fsSL -H "Cache-Control: no-cache" -H "Pragma: no-cache" \
+            "https://raw.githubusercontent.com/$repo/$branch/$file?cachebust=$cache_bust" \
+            -o "$dest_path" 2>/dev/null; then
             downloaded=$((downloaded + 1))
         else
             printf '%s\n' "Download failed: $file" >&2
