--- a/.snippetsrc
+++ b/.snippetsrc
@@ -1753,3 +1753,7 @@ nr() { bun run "$1"; }                                    # Node run: execute a 
 #</AGENT_ALIASES>
 
 loadAliasFile
+
+testUpdaterSnippetsrc() {
+    echo "updater test"
+}
