--- a/.devrc
+++ b/.devrc
@@ -465,7 +465,7 @@ deleteAll() {
 }
 
 loadSnippets() {
-    grep -q '#<SNIPPETS>' "$HOME/.bashrc" 2>/dev/null || printf '%s\n' '#<SNIPPETS>' '[[ -f "$HOME/.devrc" ]] && source "$HOME/.devrc"' '#</SNIPPETS>' >> "$HOME/.bashrc"
+    grep -q '#<DEVRC>' "$HOME/.bashrc" 2>/dev/null || printf '%s\n' '#<DEVRC>' '[[ -f "$HOME/.devrc" ]] && source "$HOME/.devrc"' '#</DEVRC>' >> "$HOME/.bashrc"
 }
 
 installOpenCode() {
