--- a/.devrc
+++ b/.devrc
@@ -1961,10 +1961,10 @@ termuxLoginUbuntu() {
 #</TERMUX>
 
 #<AGENT_ALIASES>
-gc() { git add -A && git status && git commit -m "$1"; }  # Git commit: stage all, show status, commit with message (no push)
-gcp() { git add -A && git status; }                       # Git commit preview: stage all and show what would be committed
-gpr() { gh pr create --fill; }                            # GitHub PR: create pull request with auto-filled title/body
-nr() { bun run "$1"; }                                    # Node run: execute a script from package.json using Bun
+agc() { git add -A && git status && git commit -m "$1"; }  # Git commit: stage all, show status, commit with message (no push)
+agcp() { git add -A && git status; }                       # Git commit preview: stage all and show what would be committed
+agpr() { gh pr create --fill; }                            # GitHub PR: create pull request with auto-filled title/body
+anr() { bun run "$1"; }                                    # Node run: execute a script from package.json using Bun
 #</AGENT_ALIASES>
 
 loadAliasFile
