--- a/.devrc
+++ b/.devrc
@@ -54,7 +54,7 @@ if devrcSelfUpdateOnSource; then
 fi
 
 loadAliasFile() {
-    if command -v shopt >/dev/null 2>&1; then
+    if [ -n "${BASH_VERSION:-}" ]; then
         shopt -s expand_aliases
     fi
 
