--- a/.devrc
+++ b/.devrc
@@ -67,9 +67,15 @@ loadAliasFile() {
     elif [ -n "${USERNAME:-}" ] && [ -f "/c/Users/$USERNAME/ALIAS" ]; then
         alias_file="/c/Users/$USERNAME/ALIAS"
     else
+        printf '%s\n' "ALIAS file not found. Expected $HOME/ALIAS or Windows user ALIAS file." >&2
         return 1
     fi
-    
+
+    if [ ! -s "$alias_file" ]; then
+        printf '%s\n' "ALIAS file is empty: $alias_file" >&2
+        return 1
+    fi
+
     local current_func=""
     while IFS= read -r line || [ -n "$line" ]; do
         line="${line%%#*}"
